Added edit action

--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -13,6 +13,11 @@
         <span class="rating"> Duration(min:): <%= exercise.duration %> </span>
       </div>
 
+		<div class="span1" style="float: right; text-align: right;">
+			<%= link_to "Edit".html_safe, edit_exercise_path(exercise) %>
+		</div>
+
+
     </div>
 	
 
