--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -1,6 +1,7 @@
-<div class="span10" xmlns="http://www.w3.org/1999/html">
-  <h2> Edit the Workout </h2>
-  <hr>
+<h2> Edit the Workout </h2>
+<hr>
+<div class="span10" style="float:right">
+	<% kinds = ["Cardio", "Weight lifting"] %>
   <div class="span9">
     <%= form_for(@exercises, :html => { :class => "form-horizontal" } ) do |f| %>
     <div class="control-group">
@@ -10,15 +11,15 @@
       </div>
     </div>
     <div class="control-group">
-      <%= f.label :workout_type, class: "control-label" %>
-      <div class="controls">
-        <%= f.text_field :workout_type, :class => 'input-large' %>
-      </div>
-    </div>
-    <div class="control-group">
       <%= f.label :duration, class: "control-label" %>
       <div class="controls">
         <%= f.text_field :duration, :class => 'input-large' %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :workout_type, class: "control-label" %>
+      <div class="controls">
+        <%= f.select(:workout_type, kinds) %>
       </div>
     </div>
 
@@ -30,3 +31,6 @@
     <% end %>
   </div>
 </div>
+  
+
+  
