--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,4 +1,4 @@
-<h2> Edit the Workout </h2>
+<h2> New Workout </h2>
 <hr>
 <div class="span10" style="float:right">
 	<% kinds = ["Cardio", "Weight lifting"] %>
@@ -7,13 +7,13 @@
     <div class="control-group">
       <%= f.label :name, class: "control-label" %>
       <div class="controls">
-        <%= f.text_field :name, :class => 'input-xlarge' %>
+        <%= f.text_field :name, :class => 'input-large' %>
       </div>
     </div>
     <div class="control-group">
       <%= f.label :duration, class: "control-label" %>
       <div class="controls">
-        <%= f.text_field :duration, :class => 'input-xlarge' %>
+        <%= f.text_field :duration, :class => 'input-large' %>
       </div>
     </div>
     <div class="control-group">
