--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,21 +37,18 @@
                     <a class="brand" href="#">Movie Manager</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li class="active"><a href="#">W/O Log</a></li>
+                            <li><a href="#f_log">Food Log</a></li>
+                            <li><a href="#wo_prog">W/O Program</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Food Menu<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li class="nav-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="#he_tips">H.E. tips</a></li>
+                                    <li><a href="#wte_wnte">WTE/WNTE</a></li>
                                 </ul>
                             </li>
+                            <li><a href="#prog_chrt">Prog. Chart</a></li>
+                            <li><a href="#motivate">Motivation</a></li>
                         </ul>
                         
                     </div><!--/.nav-collapse -->
