--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,59 +1,69 @@
 <% time = Time.now %>
 <% if @month.nil? %>
     <% @month = time.strftime "%B" %>
-    <% end %>
+<% end %>
+
+<% @@month_choices = ["January","February", "March", "April", "May", "June","July", "August", "September", "October", "November", "December"] %>
+
 <h3> Workouts for <%= "#{@month}" %> 2013</h3>
+
 <%= link_to 'New Workout', new_workout_path %>
+<%= form_tag(days_path, :method => "get") do %>
+    <p>
+      <%= select_tag(:search, options_for_select(@@month_choices, :selected => params[:search])) %><!--month_choices[time.month-1] -->
+      <%= submit_tag "Change month", :name => nil %>
+    </p>
+<% end %>
+
 <hr>
 <!--<%= link_to 'New Day', new_day_path %>-->
 <br>
 
 <div class="span12">
 
-<% @@month_choices = ["January","February", "March", "April", "May", "June","July", "August", "September", "October", "November", "December"] %>
 
 
-  <%#= form_for(@days, :html => { :class => "form-horizontal" } ) do |f| %>
 
-  <%#end%>
 
-<%= form_tag(days_path, :method => "get") do %>
-  <p>
-    <%= select_tag(:search, options_for_select(@@month_choices, :selected => params[:search])) %><!--month_choices[time.month-1] -->
-    <%= submit_tag "Change month", :name => nil %>
-  </p>
-<% end %>
+  <% @days.each do |day|  %>
+      <%@work = Workout.where("workout_date = ?", day.date)%>
+      <div class="span2 hero-unit" style="min-height:150px;height:auto !important;height:150px;">
 
-<% @days.each do |day|  %>
 
-    <div class="span2 hero-unit">
-    	<!--<%day.emp = false%>
+        <!--<%day.emp = false%>
     	<%if day.emp == false%>
     	  Workouts
     	<%else%>
     	  No Workouts
     	  <%end%>-->
-      <div class="name span2" style="float:right; text-align: right; vertical-align:text-top;">
-        <strong>  </strong><%= "#{day.date.last(2)}" %> <!--Workouts:   day.exercises-->
+        <div class="name span2" style="float:right; text-align: right; vertical-align:text-top;">
+          <strong>  </strong><%= "#{day.date.last(2)}" %> <!--Workouts:   day.exercises-->
+
+        </div>
+
+        <div  >
+          <% @work.each do |a| %>
+              <li><%= "#{a.name}" %>  </li>
+          <% end %>
+        </div>
+
+        <div class="span1" style="float: right; text-align: right;">
+          <!--<%= link_to "Edit", edit_workout_path(day.id) %>-->
+        </div>
+
+        <div class="span1" style="float: right; text-align: right;">
+          <!--<%#= link_to 'Delete', {:controller => "workouts", :action => 'destroy', :id => day.id}, :method => :delete %>-->
+
+        </div>
+
+        <div class="span1" style="float: right; text-align: right;">
+          <%= link_to "Show", day_path(day.id) %>           <!--date.last(2)-->
+        </div>
+
+
       </div>
 
-      <div class="span1" style="float: right; text-align: right;">
-      	<!--<%= link_to "Edit", edit_workout_path(day.id) %>-->
-      </div>
-      
-      <div class="span1" style="float: right; text-align: right;">
-      	<!--<%#= link_to 'Delete', {:controller => "workouts", :action => 'destroy', :id => day.id}, :method => :delete %>-->
-      	
-      </div>
-      
-      <div class="span1" style="float: right; text-align: right;">
-      	<%= link_to "Show", day_path(day.id) %>           <!--date.last(2)-->
-      </div>
-      
-      
-    </div>
-	
 
-<% end %>
+  <% end %>
 </div>
 <br>
