--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @survey do |f| %>
-
+    <%= f.hidden_field :user_id %>
     <h2>Take Survey</h2>
     <ol>
     <li>My bone structure is: </li>
