--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_workout_path(@workout) %> |
+<%= link_to 'Edit', edit_workout_path(current_user) %> |
 <%= link_to 'Back', days_path %>
 <br />
 
