--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -40,6 +40,7 @@
 	<% kinds_choices = ["Cardio", "Weight lifting"] %>
   <div class="span9">
     <%= form_for(@workout, :html => { :class => "form-horizontal" } ) do |f| %>
+        <%= f.hidden_field :user_id %>
     <div class="control-group">
       <%= f.label :name, class: "control-label" %>
       <div class="controls">
