Change month dropdown position change
Also fixed path in motivational quotes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,11 +77,12 @@
           </div>
 
           <!-- this is our footer -->
-          <div style="text-align: center; margin-top: 20px;">
+          <div style="text-align: center; margin-top: 20px; width:95%">
             <hr>
             <footer>
                 <p>&copy; CSE/CIT 337 - Winter 2013</p>
             </footer>
+            <hr>
           </div>
         </div> <!-- /container -->
 
