--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -8,13 +8,14 @@
 <h3> Workouts for <%= "#{@month}" %> 2013</h3>
 
 <%= link_to 'New Workout', new_workout_path %>
-<%= form_tag(days_path, :method => "get") do %>
-    <p>
-      <%= select_tag(:search, options_for_select(@@month_choices, :selected => params[:search])) %><!--month_choices[time.month-1] -->
-      <%= submit_tag "Change month", :name => nil %>
-    </p>
-<% end %>
-
+<div style="float: right; margin-top:-40px;margin-right: 70px;" >
+    <%= form_tag(days_path, :method => "get") do %>
+        <p>
+          <%= select_tag(:search, options_for_select(@@month_choices, :selected => params[:search])) %><!--month_choices[time.month-1] -->
+         <div style="margin-top:-48px;margin-left:223px;"> <%= submit_tag "Change month", :name => nil %></div>
+        </p>
+    <% end %>
+</div>
 <hr>
 <!--<%= link_to 'New Day', new_day_path %>-->
 <br>
