--- a/app/views/motivation/index.html.erb
+++ b/app/views/motivation/index.html.erb
@@ -10,7 +10,7 @@
 		</a>
 	</div>
 	<div class="span6">
-		<a href="<%= quote_options_path %>">
+		<a href="<%= motivation_options_path %>">
 			<div class="hero-unit" style="text-align:center; vertical-align:text-middle;">
 				<span style="color:black;font-weight:bold">Appearance</span>
 			</div>
