Added Food Database

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 									<% else %>
 										<li><%= link_to 'Workout Log'.html_safe, days_path %></li>
 										<li><a href="#" style="color:red">Exercise Program</a></li>
-										<li><a href="#" style="color:red">Food Database</a></li>
+										<li><%= link_to 'Eating Tips' .html_safe, foods_path %></li>
 										<li><a href="#" style="color:red">Eating Tips</a></li>
 										<li><%= link_to 'Motivation'.html_safe, motivation_index_path %></li>
 										<li><a href="#" style="color:red">Progress Chart</a></li>
