--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,29 +1,53 @@
+<!-- Set current month -->
 <% time = Time.now %>
 <% if @month.nil? %>
     <% @month = time.strftime "%B" %>
 <% end %>
 
-<% @@month_choices = ["January","February", "March", "April", "May", "June","July", "August", "September", "October", "November", "December"] %>
+<!-- Set current year -->
+<% time = Time.now %>
+<% if @year.nil? %>
+    <% @year = time.strftime "%Y" %>
+<% end %>
 
-<h3> Workouts for <%= "#{@month}" %> 2013</h3>
+<!--Year and Month arrays-->
+<% month_choices = ["January","February", "March", "April", "May", "June","July", "August", "September", "October", "November", "December"] %>
+<% year_choices = ((yr=Date.current.year)-5..yr+5).to_a %>
+
+<!-- Header -->
+<h3> Workouts for <%= "#{@month} #{@year}" %></h3>
+
+<!-- Display link to New Workout if user logged in -->
 <% if user_signed_in? %>
     <%= link_to 'New Workout', new_workout_path %>
 <% end %>
+
+<!-- Change Month -->
 <div style="float: right; margin-top:-40px;margin-right: 70px;" >
     <%= form_tag(days_path, :method => "get") do %>
         <p>
-          <%= select_tag(:search, options_for_select(@@month_choices, :selected => params[:search])) %><!--month_choices[time.month-1] -->
-         <div style="margin-top:-48px;margin-left:223px;"> <%= submit_tag "Change month", :name => nil %></div>
+          <%= select_tag(:search1, options_for_select(month_choices, :selected => params[:search1])) %><!--month_choices[time.month-1] -->
+          <%= select_tag(:search2, options_for_select(year_choices, :selected => params[:search2])) %>
+         <div style="margin-top:-18px;margin-left:338px;"> <%= submit_tag "Change month", :name => nil %></div>
         </p>
     <% end %>
 </div>
+
+<!-- Change Year
+<div style="float: right; margin-top:-10px;margin-right: 70px;" >
+  <%#= form_tag(days_path, :method => "get") do %>
+      <p>
+        <%#= select_tag(:search, options_for_select(@@year_choices, :selected => params[:search])) %>
+      <div style="margin-top:-48px;margin-left:223px;"> <%#= submit_tag "Change year", :name => nil %></div>
+      </p>
+  <%# end %>
+</div>-->
 <hr>
 
 <!--<%#= link_to 'New Day', new_day_path %>-->
 <br>
 
 <div class="span12">
-
   <% @days.each do |day|  %>
       <%@work = Workout.where("workout_date = ? and user_id = ?", day.date, current_user)%>
       <div class="span2 hero-unit" style="min-height:150px;height:150px;">
