--- a/app/views/motivation_options/index.html.erb
+++ b/app/views/motivation_options/index.html.erb
@@ -2,5 +2,16 @@
 
 <hr />
 <div class="row-fluid">
-	To be completed!
+	<div class="span12">
+		<div class="hero-unit" style="text-align:center; vertical-align:text-middle;">
+			<span>You have <strong><%= @quotecount %></strong> quotes saved.</span>
+			<br />
+			<span>Here is a random quote to encourage you: <strong>"<%= @quote.content %>", - <%= @quote.author %></strong></span>
+		</div>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span12 hero-unit" style="text-align:center; vertical-align:text-middle;">
+		<%= link_to 'Return', motivation_index_path %>
+	</div>
 </div>
