--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -47,10 +47,11 @@
 <!--<%#= link_to 'New Day', new_day_path %>-->
 <br>
 
-<div class="span12">
+
+<div class="span12" style="margin-left:-20px">
   <% @days.each do |day|  %>
       <%@work = Workout.where("workout_date = ? and user_id = ?", day.date, current_user)%>
-      <div class="span2 hero-unit" style="min-height:150px;height:150px;">
+	  <div class="span2 hero-unit" style="min-height:150px;height:150px;">
 
         <div class="name span2" style="float:right; text-align: right; vertical-align:text-top; margin-top: -20px; margin-right: -10px">
           <%= "#{day.date.last(2)}" %> <!--Workouts:   day.exercises-->
@@ -85,7 +86,7 @@
         </div>
 
       </div>
-
+	  
   <% end %>
 </div>
 <br>
