Fixed random quote issue.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,9 @@
 	<div class="span12 hero-unit" style="text-align:center; vertical-align:text-middle;">
 		<span>Welcome, <strong><%= current_user.name %></strong>!</span>
 		<br />
-		<span><strong>"<%= @quote.content%>", - <%= @quote.author %></strong></span>
+		<% if @quotecount != 0 %>
+		<span><strong>"<%= @quote.content%>", - <%= @quote.author %></strong></span>		
+		<% end %>
 	</div>
 </div>
 <div class="row-fluid">
