--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,5 +1,5 @@
 <div class="b_type">
-<%= link_to 'Back'.html_safe, days_path %>
+<%= link_to 'Back'.html_safe, user_path(current_user) %>
 </div>
 
 <h2>Body Type</h2>
